# CliWorkers

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Cli.cpp  Cli.h  ConsoleReader.cpp  ConsoleReader.h  FractalWorker.cpp  FractalWorker.h  QuotesWorker.cpp  QuotesWorker.h  Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h  main.cpp
test/: CMakeLists.txt  FractalWorkerTest.cpp  FractalWorkerTest.h  main.cpp
